gccida/g1/expand_builtin_extract_return_addr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_extract_return_addr/src/except.c:3723:39: error: use of undeclared identifier 'machine_mode'
return expand_expr( addr_tree, 0LL, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), EXPAND_NORMAL); 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_extract_return_addr/src/obj/except.o] Error 1
